ocp-argo-files/keycloak/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: sso
    app.kubernetes.io/component: sso
    app.kubernetes.io/instance: sso
spec:
  ports:
  - name: http-8080
    port: 8080
    targetPort: 8080
  - name: https-8443
    port: 8443
    targetPort: 8443
  selector:
    app: sso
